--- a/source/form.html
+++ b/source/form.html
@@ -129,213 +129,240 @@
       </div>
       <section class="form">
         <h2 class="visually-hidden">Форма заказа</h2>
-        <p class="form__subtitle">
-          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
-          форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-        </p>
+        <div class="container">
+          <p class="form__subtitle">
+            Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
+            форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+          </p>
+        </div>
+
         <form
           class="form__body"
           action="https://echo.htmlacademy.ru"
           method="post"
         >
-          <div class="form__container form__container--type">
-            <div class="form__container-title">
-              Тип<span class="form__container-title-line"></span>
+          <div class="form__inner">
+            <div class="container">
+              <div class="form__container form__container--type">
+                <div class="form__container-title">
+                  Тип<span class="form__container-title-line"></span>
+                </div>
+                <ul class="form__container-list form__container-list--type">
+                  <li class="form__container-item">
+                    <label class="form__name form__name--radio"
+                      ><input
+                        class="form__radio visually-hidden"
+                        type="radio"
+                        name="product_type"
+                        value="accessory"
+                        checked
+                      /><span class="form__radio-img"></span>Аксессуар для
+                      интерьера</label
+                    >
+                  </li>
+                  <li class="form__container-item">
+                    <label class="form__name form__name--radio"
+                      ><input
+                        class="form__radio visually-hidden"
+                        type="radio"
+                        name="product_type"
+                        value="toy"
+                      /><span class="form__radio-img"></span>Детская
+                      игрушка</label
+                    >
+                  </li>
+                </ul>
+              </div>
             </div>
-            <ul class="form__container-list form__container-list--type">
-              <li class="form__container-item">
-                <label class="form__name form__name--radio"
-                  ><input
-                    class="form__radio visually-hidden"
-                    type="radio"
-                    name="product_type"
-                    value="accessory"
-                    checked
-                  /><span class="form__radio-img"></span>Аксессуар для
-                  интерьера</label
-                >
-              </li>
-              <li class="form__container-item">
-                <label class="form__name form__name--radio"
-                  ><input
-                    class="form__radio visually-hidden"
-                    type="radio"
-                    name="product_type"
-                    value="toy"
-                  /><span class="form__radio-img"></span>Детская игрушка</label
-                >
-              </li>
-            </ul>
           </div>
-          <div class="form__container form__container--color">
-            <div
-              class="form__container-title form__container-title--color-margin"
-            >
-              Цвет<span class="form__container-title-line"></span>
+          <div class="form__inner form__inner--greybg">
+            <div class="container">
+              <div class="form__container form__container--color">
+                <div
+                  class="form__container-title form__container-title--color-margin"
+                >
+                  Цвет<span class="form__container-title-line"></span>
+                </div>
+                <ul class="form__container-list form__container-list--color">
+                  <li class="form__container-item">
+                    <label class="form__name form__name--checkbox"
+                      ><input
+                        class="form__checkbox visually-hidden"
+                        type="checkbox"
+                        name="color"
+                        value="white"
+                        checked
+                      /><span class="form__checkbox-img"></span>Белый</label
+                    >
+                  </li>
+                  <li class="form__container-item">
+                    <label class="form__name form__name--checkbox"
+                      ><input
+                        class="form__checkbox visually-hidden"
+                        type="checkbox"
+                        name="color"
+                        value="grey"
+                        checked
+                      /><span class="form__checkbox-img"></span>Серый</label
+                    >
+                  </li>
+                  <li class="form__container-item">
+                    <label class="form__name form__name--checkbox"
+                      ><input
+                        class="form__checkbox visually-hidden"
+                        type="checkbox"
+                        name="color"
+                        value="tiffany"
+                      /><span class="form__checkbox-img"></span>«Тиффани»</label
+                    >
+                  </li>
+                  <li class="form__container-item">
+                    <label class="form__name form__name--checkbox"
+                      ><input
+                        class="form__checkbox visually-hidden"
+                        type="checkbox"
+                        name="color"
+                        value="black"
+                      /><span class="form__checkbox-img"></span>Черный</label
+                    >
+                  </li>
+                  <li class="form__container-item">
+                    <label class="form__name form__name--checkbox"
+                      ><input
+                        class="form__checkbox visually-hidden"
+                        type="checkbox"
+                        name="color"
+                        value="pink"
+                      /><span class="form__checkbox-img"></span>Розовый</label
+                    >
+                  </li>
+                  <li class="form__container-item">
+                    <label class="form__name form__name--checkbox"
+                      ><input
+                        class="form__checkbox visually-hidden"
+                        type="checkbox"
+                        name="color"
+                        value="orange"
+                      /><span class="form__checkbox-img"></span>Оранжевый</label
+                    >
+                  </li>
+                </ul>
+              </div>
             </div>
-            <ul class="form__container-list form__container-list--color">
-              <li class="form__container-item">
-                <label class="form__name form__name--checkbox"
-                  ><input
-                    class="form__checkbox visually-hidden"
-                    type="checkbox"
-                    name="color"
-                    value="white"
-                    checked
-                  /><span class="form__checkbox-img"></span>Белый</label
-                >
-              </li>
-              <li class="form__container-item">
-                <label class="form__name form__name--checkbox"
-                  ><input
-                    class="form__checkbox visually-hidden"
-                    type="checkbox"
-                    name="color"
-                    value="grey"
-                    checked
-                  /><span class="form__checkbox-img"></span>Серый</label
-                >
-              </li>
-              <li class="form__container-item">
-                <label class="form__name form__name--checkbox"
-                  ><input
-                    class="form__checkbox visually-hidden"
-                    type="checkbox"
-                    name="color"
-                    value="tiffany"
-                  /><span class="form__checkbox-img"></span>«Тиффани»</label
-                >
-              </li>
-              <li class="form__container-item">
-                <label class="form__name form__name--checkbox"
-                  ><input
-                    class="form__checkbox visually-hidden"
-                    type="checkbox"
-                    name="color"
-                    value="black"
-                  /><span class="form__checkbox-img"></span>Черный</label
-                >
-              </li>
-              <li class="form__container-item">
-                <label class="form__name form__name--checkbox"
-                  ><input
-                    class="form__checkbox visually-hidden"
-                    type="checkbox"
-                    name="color"
-                    value="pink"
-                  /><span class="form__checkbox-img"></span>Розовый</label
-                >
-              </li>
-              <li class="form__container-item">
-                <label class="form__name form__name--checkbox"
-                  ><input
-                    class="form__checkbox visually-hidden"
-                    type="checkbox"
-                    name="color"
-                    value="orange"
-                  /><span class="form__checkbox-img"></span>Оранжевый</label
-                >
-              </li>
-            </ul>
           </div>
-          <div class="form__container form__container--fio">
-            <div class="form__container-title">
-              ФИО<span class="form__container-title-line"></span>
-            </div>
-            <label class="form__name form__name--grid form__name--name-margin">
-              Имя:<input
-                class="form__text"
-                type="text"
-                name="name"
-                placeholder="Введите ваше имя*"
-              />
-            </label>
+          <div class="form__inner">
+            <div class="container">
+              <div class="form__container form__container--fio">
+                <div class="form__container-title">
+                  ФИО<span class="form__container-title-line"></span>
+                </div>
+                <label
+                  class="form__name form__name--grid form__name--name-margin"
+                >
+                  Имя:<input
+                    class="form__text"
+                    type="text"
+                    name="name"
+                    placeholder="Введите ваше имя*"
+                  />
+                </label>
 
-            <label
-              class="form__name form__name--grid form__name--lastname-margin"
-              >Фамилия:<input
-                class="form__text"
-                type="text"
-                name="lastname"
-                placeholder="Укажите фамилию*"
-            /></label>
+                <label
+                  class="form__name form__name--grid form__name--lastname-margin"
+                  >Фамилия:<input
+                    class="form__text"
+                    type="text"
+                    name="lastname"
+                    placeholder="Укажите фамилию*"
+                /></label>
 
-            <label
-              class="form__name form__name--grid form__name--patronymic-margin"
-              >Отчество:<input
-                class="form__text"
-                type="text"
-                name="patronymic"
-                placeholder="Отчество, если желаете"
-            /></label>
-          </div>
-          <div class="form__container form__container--contact">
-            <div
-              class="form__container-title form__container-title--contact-margin"
-            >
-              ТЕЛ<span class="form__container-title-line"></span>
+                <label
+                  class="form__name form__name--grid form__name--patronymic-margin"
+                  >Отчество:<input
+                    class="form__text"
+                    type="text"
+                    name="patronymic"
+                    placeholder="Отчество, если желаете"
+                /></label>
+              </div>
             </div>
-            <label
-              class="form__name form__name--grid form__name--phone-margin"
-              aria-label="Введите Ваш номер телефона"
-            >
-              <input
-                class="form__tel"
-                type="tel"
-                name="phone"
-                placeholder="+7 ХХХ ХХХ ХХ ХХ*"
-                required
-              />
-              <svg
-                class="form__tel-icon"
-                width="24.829px"
-                height="24.333px"
-                aria-hidden="true"
-              >
-                <use xlink:href="#icon-phone"></use>
-              </svg>
-            </label>
+          </div>
+          <div class="form__inner form__inner--greybg">
+            <div class="container">
+              <div class="form__container form__container--contact">
+                <div
+                  class="form__container-title form__container-title--contact-margin"
+                >
+                  ТЕЛ<span class="form__container-title-line"></span>
+                </div>
+                <label
+                  class="form__name form__name--grid form__name--phone-margin"
+                  aria-label="Введите Ваш номер телефона"
+                >
+                  <input
+                    class="form__tel"
+                    id="tel"
+                    type="tel"
+                    name="phone"
+                    placeholder="+7 ХХХ ХХХ ХХ ХХ*"
+                    required
+                  />
+                  <svg
+                    class="form__tel-icon"
+                    width="24.829px"
+                    height="24.333px"
+                    aria-hidden="true"
+                  >
+                    <use xlink:href="#icon-phone"></use>
+                  </svg>
+                </label>
 
-            <div
-              class="form__container-title form__container-title--contact-margin"
-            >
-              E-mail<span class="form__container-title-line"></span>
+                <div
+                  class="form__container-title form__container-title--contact-margin"
+                >
+                  E-mail<span class="form__container-title-line"></span>
+                </div>
+                <label
+                  class="form__name form__name--grid form__name--email-margin"
+                  aria-label="Введите Ваш Email"
+                >
+                  <input
+                    class="form__email"
+                    type="email"
+                    name="email"
+                    placeholder="Ваш Email*"
+                    required
+                  />
+                  <svg
+                    class="form__email-icon"
+                    width="32px"
+                    height="32px"
+                    aria-hidden="true"
+                  >
+                    <use xlink:href="#icon-mail"></use>
+                  </svg>
+                </label>
+              </div>
             </div>
-            <label
-              class="form__name form__name--grid form__name--email-margin"
-              aria-label="Введите Ваш Email"
-            >
-              <input
-                class="form__email"
-                type="email"
-                name="email"
-                placeholder="Ваш Email*"
-                required
-              />
-              <svg
-                class="form__email-icon"
-                width="32px"
-                height="32px"
-                aria-hidden="true"
-              >
-                <use xlink:href="#icon-mail"></use>
-              </svg>
-            </label>
           </div>
-          <div class="form__container form__container--extra">
-            <div class="form__container-title">
-              ДОП<span class="form__container-title-line"></span>
+          <div class="form__inner">
+            <div class="container">
+              <div class="form__container form__container--extra">
+                <div class="form__container-title">
+                  ДОП<span class="form__container-title-line"></span>
+                </div>
+                <label
+                  class="form__name form__name--grid form__name--extra-margin"
+                  aria-label="Опишите все ваши пожелания к заказу"
+                >
+                  <textarea
+                    class="form__extra"
+                    name="extra"
+                    placeholder="Опишите все ваши пожелания к заказу"
+                  ></textarea>
+                </label>
+              </div>
             </div>
-            <label
-              class="form__name form__name--grid form__name--extra-margin"
-              aria-label="Опишите все ваши пожелания к заказу"
-            >
-              <textarea
-                class="form__extra"
-                name="extra"
-                placeholder="Опишите все ваши пожелания к заказу"
-              ></textarea>
-            </label>
           </div>
           <div class="form__bottom">
             <p class="form__note">*Поля обязательны для заполнения</p>
